# keyboard-familiar

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: app.yaml  plugins.yaml  rules.yaml  scenes.yaml
docs/adr/: 0001-modular-monolith.md  0002-ai-optional.md  0003-scenes-required.md
familiar/: __init__.py  app.py  bootstrap.py  cli.py
familiar/adapters/steelseries/: transport.py
familiar/core/: arbitration.py  bus.py  config.py  events.py  models.py  routing.py  scenes.py  state.py
familiar/plugins/: base.py  manager.py
familiar/plugins/brains/: rules_basic.py
familiar/plugins/sensors/: gpu_vram.py  manual_trigger.py  timer.py
familiar/plugins/surfaces/: console_debug.py  steelseries_oled.py
keyboard_familiar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/integration/: test_gpu_vram_flow.py  test_manual_to_console.py  test_runtime_persistence.py  test_scene_preemption.py
